# xale-db

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  appconfig.json  autorun.sh
.github/workflows/: cmake-single-platform-linux.yml  cmake-single-platform-windows.yml  cmake-single-platform.yml  doxygen-deploy.yml
apps/cli/: main.cpp
apps/debug/: main.cpp
apps/server/: main.cpp
docs/: sql-commands-usage.md
docs/doxygen-pages/: architecture.dox  contribute.dox  security.dox  sql-usage.dox  tests.dox
examples/: simple-test.sql
include/Client/: CLIClient.h  IClient.h
include/Core/: AssertException.h  ConfigurationHandler.h  ConfigurationPath.h  ExceptionHandler.h  Setup.h
include/DataStructure/: BPlusTree.h  DataTypes.h  IDataTemplate.h  Node.h  ResultSet.h  Table.h
include/Engine/: QueryEngine.h
include/Execution/: BasicExecutor.h  IExecutor.h  TableManager.h
include/Net/: TcpClient.h  TcpServer.h
include/Net/Packet/: IPacket.h  Packet.h  PacketConstants.h
include/Net/Socket/: BasicSocketFactory.h  IClientConnection.h  IListenerSocket.h  ISocket.h  ISocketFactory.h  LinuxListenerSocket.h  LinuxServerSocket.h  LinuxSocket.h  SSLSocketFactory.h  SocketFactory.h  WindowsListenerSocket.h  WindowsSocket.h
include/Net/Socket/Linux/: LinuxClientConnection.h  LinuxListenerSocket.h  LinuxSSLClientConnection.h  LinuxSSLListenerSocket.h  LinuxSSLSocket.h  LinuxSocket.h
include/Net/Socket/Windows/: WindowsListenerSocket.h
include/Query/: BasicParser.h  BasicTokenizer.h  IParser.h  ITokenizer.h  Statement.h  Token.h
include/Storage/: BinaryFileManager.h  FileManager.h  FileStorageEngine.h  IFileManager.h  IStorageEngine.h  StorageEngine.h
src/: main.cpp
src/Client/: CLIClient.cpp
src/Core/: ConfigurationHandler.cpp  ExceptionHandler.cpp  Setup.cpp
src/DataStructure/: ResultSet.cpp  Table.cpp
src/Engine/: QueryEngine.cpp
src/Execution/: BasicExecutor.cpp  TableManager.cpp
src/Net/: LinuxSocket.cpp  TcpClient.cpp  TcpServer.cpp
src/Net/Packet/: Packet.cpp
src/Net/Socket/: BasicSocketFactory.cpp  LinuxListenerSocket.cpp  LinuxSocket.cpp  SSLSocketFactory.cpp  SocketFactory.cpp  WindowsListenerSocket.cpp  WindowsSocket.cpp
src/Net/Socket/Linux/: LinuxClientConnection.cpp  LinuxListenerSocket.cpp  LinuxSSLClientConnection.cpp  LinuxSSLListenerSocket.cpp  LinuxSSLSocket.cpp  LinuxSocket.cpp
src/Query/: BasicParser.cpp  BasicTokenizer.cpp
src/Storage/: BinaryFileManager.cpp  FileManager.cpp  FileStorageEngine.cpp  StorageEngine.cpp
tests/: FileManagerTests.h  StorageEngineTests.h  TestsHelper.h  main.cpp
tests/DataStructure/: BPlusTreeTests.h  NodeTests.h
tests/Execution/: BasicExecutorTests.h  TableManagerTests.h
tests/Net/: PacketTests.h
tests/Query/: BasicParserTests.h  BasicTokenizerTests.h
tests/Storage/: FileManagerTests.h  StorageEngineTests.h
